# Iris

./: CMakeLists.txt  README.md
apps/dashboard/: CMakeLists.txt  main.cpp  resources.qrc
apps/dashboard/include/: main_window.hpp
apps/dashboard/src/: main_window.cpp
apps/dashboard/src/widgets/: analog_clock.cpp  digital_clock.cpp  habit_tracker.cpp  logo.cpp
apps/dashboard/ui/: main_window.cpp  main_window.hpp
apps/dashboard/widgets/: analog_clock.cpp  digital_clock.cpp  digital_clock.hpp  habit_tracker.cpp
assistant/: CMakeLists.txt
dashboard/include/: main_window.hpp
dashboard/include/widgets/: analog_clock.hpp  date.hpp  digital_clock.hpp  habit_tracker.hpp  logo.hpp
dashboard/src/: main.cpp  main_window.cpp
dashboard/src/widgets/: analog_clock.cpp  digital_clock.cpp  habit_tracker.cpp  logo.cpp
src/ui/: main_window.cpp  main_window.hpp  mainwindow.cpp
src/widgets/: analog_clock.hpp  habit_tracker.hpp  logo.cpp  logo_widget.cpp  logo_widget.hpp
